# average

./: .gitignore
client/: CMakeLists.txt  conanfile.txt
client/src/: application.h  main.cpp  randomizer.h
client/src/client/: client.cpp  client.h
server/: CMakeLists.txt
server/src/: application.h  main.cpp  randomstorage.h  server.h
